# tello-ros2-gazebo

tello_ros/tello_description/: CMakeLists.txt
tello_ros/tello_description/urdf/: forward_sprite.xml
tello_ros/tello_gazebo/launch/: simple_launch.py
tello_ros/tello_gazebo/media/materials/scripts/: forward.material
tello_ros/tello_streamer/: package.xml  setup.cfg  setup.py
tello_ros/tello_streamer/tello_streamer/: tello_streamer.py
